[gd_scene load_steps=16 format=3 uid="uid://73i7rl2mk865"]

[ext_resource type="Script" path="res://scripts/Buildings/npc.gd" id="1_yinxp"]
[ext_resource type="Texture2D" uid="uid://cqxunjcsn1k2l" path="res://art/World/Player Map/NPCs/Huggy Sugar-Gold/Huggy Sugar-Gold.png" id="2_ukvr8"]
[ext_resource type="Texture2D" uid="uid://capgke4dv1vbg" path="res://art/World/Player Map/NPCs/Greasy Jim/Greasy Jim.png" id="3_mhk0f"]
[ext_resource type="Texture2D" uid="uid://bkc1tjst7l04l" path="res://art/UI/UI pixelart Assets 4 -1.3/16x16/Set1/Set1-1.png" id="4_nspc1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_68akm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kryr2"]

[sub_resource type="Animation" id="Animation_hulu3"]
resource_name = "Idle_Huggy"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Huggy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_kn1tx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Huggy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Greasy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6v0id"]
resource_name = "idle_Greasy"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Greasy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nlqy0"]
_data = {
"Idle_Huggy": SubResource("Animation_hulu3"),
"RESET": SubResource("Animation_kn1tx"),
"idle_Greasy": SubResource("Animation_6v0id")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8ki4u"]
animation = &"idle_Greasy"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ikucv"]
animation = &"Idle_Huggy"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vwjer"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j4nwm"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_736sw"]
states/idle_Greasy/node = SubResource("AnimationNodeAnimation_8ki4u")
states/idle_Greasy/position = Vector2(383, 188)
states/idle_Huggy/node = SubResource("AnimationNodeAnimation_ikucv")
states/idle_Huggy/position = Vector2(383, 100)
transitions = ["Start", "idle_Huggy", SubResource("AnimationNodeStateMachineTransition_vwjer"), "Start", "idle_Greasy", SubResource("AnimationNodeStateMachineTransition_j4nwm")]

[node name="npc_1" type="StaticBody2D"]
script = ExtResource("1_yinxp")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -80)
scale = Vector2(5.62379, 5.91423)
shape = SubResource("CapsuleShape2D_68akm")

[node name="PlayerDetector" type="Area2D" parent="Collider"]
position = Vector2(45.7407, -5.31496)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider/PlayerDetector"]
position = Vector2(-45.5556, -1.5748)
scale = Vector2(2.25787, 2.09781)
shape = SubResource("CapsuleShape2D_kryr2")

[node name="Huggy" type="Sprite2D" parent="."]
texture = ExtResource("2_ukvr8")
offset = Vector2(0, -150)
hframes = 8

[node name="Greasy" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_mhk0f")
offset = Vector2(0, -150)
hframes = 8

[node name="InteractibleButtonHelper" type="Sprite2D" parent="."]
position = Vector2(0, -300)
scale = Vector2(3.01079, 2.94478)
texture = ExtResource("4_nspc1")

[node name="Label" type="Label" parent="InteractibleButtonHelper"]
offset_left = -3.24324
offset_top = -7.11111
offset_right = 12.7568
offset_bottom = 18.8889
theme_override_font_sizes/font_size = 10
text = "F"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nlqy0")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_736sw")
anim_player = NodePath("../AnimationPlayer")
active = true

[connection signal="body_entered" from="Collider/PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Collider/PlayerDetector" to="." method="_on_player_detector_body_exited"]
